--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^11.0.0",
     "express": "^4.17.2",
+    "mustache-express": "^1.3.2",
     "mysql2": "^2.3.3",
     "sequelize": "^6.13.0",
     "sequelize-cli": "^6.3.0",
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/mustache-express": "^1.2.1",
     "@types/sequelize": "^4.28.11",
     "nodemon": "^2.0.15"
   }
