--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "1.0.0",
   "description": "Projeto para estudo de node",
   "main": "index.ts",
+  "endines": {
+    "node": "14.x"
+  },
   "scripts": {
     "dev": "nodemon -e ts,js,mst,mustache src/server.ts",
+    "start": "node dist/server.js",
+    "postinstall": "tsc && copyfiles -u 1 src/**/*.mst dist/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Quenede Abreu",
@@ -22,6 +27,7 @@
     "@types/express": "^4.17.13",
     "@types/mustache-express": "^1.2.1",
     "@types/sequelize": "^4.28.11",
+    "copyfiles": "^2.4.1",
     "nodemon": "^2.0.15"
   }
 }
